@@ -1,6 +1,5 @@
 package org.spoofax.jsglr2.incremental;
 
-
 import static com.google.common.collect.Iterables.isEmpty;
 import static com.google.common.collect.Iterables.size;
 import static org.metaborg.util.iterators.Iterables2.stream;
@@ -8,7 +7,6 @@ import static org.spoofax.jsglr2.incremental.IncrementalParse.NO_STATE;
 
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -16,9 +14,9 @@ import org.metaborg.parsetable.IParseTable;
 import org.metaborg.parsetable.actions.ActionType;
 import org.metaborg.parsetable.actions.IAction;
 import org.metaborg.parsetable.actions.IReduce;
-import org.metaborg.parsetable.actions.IShift;
 import org.spoofax.jsglr2.incremental.actions.GotoShift;
-import org.spoofax.jsglr2.incremental.diff.SingleDiff;
+import org.spoofax.jsglr2.incremental.diff.IStringDiff;
+import org.spoofax.jsglr2.incremental.diff.JGitHistogramDiff;
 import org.spoofax.jsglr2.incremental.lookaheadstack.ILookaheadStack;
 import org.spoofax.jsglr2.incremental.parseforest.IncrementalDerivation;
 import org.spoofax.jsglr2.incremental.parseforest.IncrementalParseForest;
@@ -46,18 +44,18 @@ public class IncrementalParser
     private final IncrementalParseFactory<StackNode, Parse> incrementalParseFactory;
     private final HashMap<String, IncrementalParseForest> cache = new HashMap<>();
     private final HashMap<String, String> oldString = new HashMap<>();
-    private final SingleDiff diff;
+    private final IStringDiff diff;
 
     public IncrementalParser(ParseFactory<IncrementalParseForest, StackNode, Parse> parseFactory,
         IncrementalParseFactory<StackNode, Parse> incrementalParseFactory, IParseTable parseTable,
-        StackManager stackManager, ParseForestManager<IncrementalParseForest, ParseNode, Derivation> parseForestManager,
+        StackManager stackManager,
+        ParseForestManager<IncrementalParseForest, ParseNode, Derivation, Parse> parseForestManager,
         ReduceManagerFactory<IncrementalParseForest, ParseNode, Derivation, StackNode, Parse, StackManager, ReduceManager> reduceManagerFactory) {
 
         super(parseFactory, parseTable, stackManager, parseForestManager, reduceManagerFactory);
         this.incrementalParseFactory = incrementalParseFactory;
-        // TODO different diffing types, probably based on:
-        // https://en.wikipedia.org/wiki/Longest_common_subsequence_problem
-        this.diff = new SingleDiff();
+        // TODO parametrize parser on diff algorithm for benchmarking
+        this.diff = new JGitHistogramDiff();
     }
 
     @Override protected Parse getParse(String inputString, String filename) {
@@ -79,9 +77,13 @@ public class IncrementalParser
 
     @Override protected void actor(StackNode stack, Parse parse) {
         Iterable<IAction> actions = getActions(stack, parse);
-        // Break down lookahead until it is a terminal or until there is something to be shifted
-        // Break down lookahead if it has no state or if there are no actions for it
-        // TODO Maybe: break down lookahead if parse.multipleStates?
+        // Break down lookahead if it has no state or if there are no actions for it.
+        // Only break down if the lookahead is not a terminal.
+        // If there are no actions, do not break down if we already have something to shift.
+        // This node that we can shift should not be broken down anymore:
+        // - if we would, it would cause different shifts to be desynchronised;
+        // - if a break-down of this node would cause different actions, it would already have been broken down because
+        // that would mean that this node was created when the parser was in multiple states.
         while(!parse.lookahead.get().isTerminal()
             && (lookaheadHasNoState(parse.lookahead) || isEmpty(actions) && parse.forShifter.isEmpty())) {
             parse.lookahead.leftBreakdown();
@@ -89,7 +91,7 @@ public class IncrementalParser
         }
 
         if(size(actions) > 1)
-            parse.multipleStates = true;
+            parse.setMultipleStates(true);
 
         Iterable<IAction> finalActions = actions;
         observing.notify(observer -> observer.actor(stack, parse, finalActions));
@@ -113,13 +115,13 @@ public class IncrementalParser
             return actions;
         } else {
             // Split in shift and reduce actions
-            List<IShift> shiftActions = stream(actions).filter(a -> a.actionType() == ActionType.SHIFT)
-                .map(a -> ((IShift) a)).collect(Collectors.toList());
+            List<IAction> shiftActions =
+                stream(actions).filter(a -> a.actionType() == ActionType.SHIFT).collect(Collectors.toList());
 
             // By default, only the reduce actions are returned
-            LinkedList<IAction> result = stream(actions)
+            List<IAction> result = stream(actions)
                 .filter(a -> a.actionType() == ActionType.REDUCE || a.actionType() == ActionType.REDUCE_LOOKAHEAD)
-                .map(a -> ((IReduce) a)).collect(Collectors.toCollection(LinkedList::new));
+                .collect(Collectors.toList());
 
             IncrementalParseNode lookaheadNode = (IncrementalParseNode) lookahead;
 
@@ -140,8 +142,8 @@ public class IncrementalParser
             // If lookahead has null yield and the production of lookahead matches the state of the GotoShift,
             // there is a duplicate action that can be removed (this is an optimization to avoid multipleStates == true)
             if(!lookaheadNode.isAmbiguous() && lookaheadNode.width() == 0 && result.size() == 2 && hasGotoShift
-                && nullReduceMatchesGotoShift(stack, (IReduce) result.getFirst(), (GotoShift) result.getLast())) {
-                result.removeFirst(); // Removes the unnecessary reduce action
+                && nullReduceMatchesGotoShift(stack, (IReduce) result.get(0), (GotoShift) result.get(1))) {
+                result.remove(0); // Removes the unnecessary reduce action
             }
 
             return result;
@@ -156,7 +158,7 @@ public class IncrementalParser
     }
 
     @Override protected IncrementalParseForest getNodeToShift(Parse parse) {
-        parse.multipleStates = parse.forShifter.size() > 1;
+        parse.setMultipleStates(parse.forShifter.size() > 1);
 
         return parse.lookahead.get();
     }
